# mcp-okn

./: .gitignore  README.md  pyproject.toml
benchmark/: .gitignore  README.md  __init__.py  adapt.py  agents.py  dataset.jsonl  dataset.py  fetch_registry.py  run_benchmark.py  score.py  smoke.py
docs/: verification-schema-org-normalization.md  verification-transcript-resource.md  verification-visualize-schema.md
metadata/: _2026-06-11-AM.json  crosswalks.json  crosswalks_2026-06-10.json
scripts/: refresh_snapshot.py  replay_transcript.py  verify_skeletons.py
src/mcp_okn/: __init__.py  crosswalks.py  registry.py  schema.py  server.py  session.py  sparql.py
src/mcp_okn/data/: crosswalks.json  kgs.json
tests/: test_benchmark.py  test_benchmark_smoke.py  test_crosswalks.py  test_probe.py  test_registry.py  test_schema.py  test_snapshot.py  test_sparql.py  test_transcript.py
