[project]
name = "mcp-okn"
version = "0.1.0"
description = "MCP server for querying the FRINK federated SPARQL endpoint over Proto-OKN knowledge graphs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/sbl-sdsc/mcp-okn"

[project.scripts]
mcp-okn = "mcp_okn.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_okn"]

[tool.hatch.build.targets.wheel.force-include]
"src/mcp_okn/data/kgs.json" = "mcp_okn/data/kgs.json"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
